// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`COMPONENT - Content > narrow content renders correctly 1`] = `
.c0 {
  max-width: 48rem;
  padding: 0 2rem;
  margin: 0 auto;
  position: relative;
}

<div>
  <div
    class="c0"
  />
</div>
`;

exports[`COMPONENT - Content > renders correctly 1`] = `
.c0 {
  max-width: 96rem;
  padding: 0 2rem;
  margin: 0 auto;
  position: relative;
}

<div>
  <div
    class="c0"
  />
</div>
`;
